package ar.edu.unlp.info.oo1.ej5_DecodificadorPeliculas;

import java.util.List;

public abstract class Strategy { 
	
	public abstract void sugerir(List<Pelicula> peliculas);
}
